# StarryEngine

./: .gitignore  CMakeLists.txt  build.bat  init.bat  readme.md  run.bat
src/: CMakeLists.txt  base.hpp
src/core/application/: Application.cpp  Application.hpp  CMakeLists.txt
src/core/ecs/: CMakeLists.txt
src/core/platform/: CMakeLists.txt  Window.cpp  Window.hpp
src/core/utils/: CMakeLists.txt
src/launch/: imgui.ini  main.cpp  vkTest1.cpp
src/renderer/: CMakeLists.txt  VulkanRenderer.cpp  VulkanRenderer.hpp
src/renderer/RenderGraph/: DecoupledRenderGraph.cpp  DecoupledRenderGraph.hpp  PipelineBuilder.cpp  RenderContext.cpp  RenderGraphAnalyzer.cpp  RenderGraphAnalyzer.hpp  ResourceSystem.cpp  SynchronizationGenerator.hpp
src/renderer/RenderGraph/ResourceManager/: ResourceManager.cpp
src/renderer/backends/: SimpleVulkanBackend.cpp  SimpleVulkanBackend.hpp
src/renderer/backends/VulkanCore/: VulkanCore.cpp  physicalDevice.cpp
src/renderer/backends/WindowContext/: WindowContext.cpp  WindowContext.hpp  swapchain.hpp
src/renderer/backends/pipelineCache/: pipeline.hpp
src/renderer/backends/pipelineCache/pipelineStates/: inputAssembly.cpp
src/renderer/backends/renderContext/: RenderContext.hpp  commandBuffer.cpp
src/renderer/backends/resourceManager/ResourceManager/: IndexBufferResource.cpp  ResourceManager.hpp  TextureResource.hpp
src/renderer/backends/resourceManager/buffers/: IndexBuffer.cpp
src/renderer/backends/vulkan/: SimpleVulkanBackend.cpp  SimpleVulkanBackend.hpp  VulkanBackend.cpp  VulkanBackend.hpp  VulkanRHI.cpp
src/renderer/backends/vulkan/descriptor/: DescriptorAllocator.cpp  DescriptorAllocator.hpp  DescriptorManager.cpp  DescriptorManager.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DescriptorTracker.cpp  DescriptorTracker.hpp  DescriptorWriter.cpp  DescriptorWriter.hpp  test.cpp
src/renderer/backends/vulkan/descriptorAllocator/: DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp
src/renderer/backends/vulkan/pipeline/: NewPipelineBuilder.cpp  NewPipelineBuilder.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  PipelineCache.cpp  pipeline.hpp  readme.md
src/renderer/backends/vulkan/pipelineCache/: pipeline.cpp
src/renderer/backends/vulkan/renderContext/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  RenderContext.cpp  RenderContext.hpp  commandPool.cpp  commandPool.hpp
src/renderer/backends/vulkan/renderPass/: RenderPass.cpp  RenderPass.hpp  RenderPassBeginInfo.cpp  RenderPassBeginInfo.hpp  RenderPassBuilder.cpp  RenderPassBuilder.hpp  RenderPassSystem.cpp  RenderpassBuilder.cpp  RenderpassBuilder.hpp  Subpass.cpp  Subpass.hpp  SubpassBuilder.cpp  SubpassBuilder.hpp  test.cpp  test.hpp
src/renderer/backends/vulkan/vulkanContext/: Device.cpp  Device.hpp  FrameContext.cpp  FrameContext.hpp  Instance.cpp  Instance.hpp  QueueHandles.cpp  QueueHandles.hpp  Swapchain.cpp  Swapchain.hpp
src/renderer/backends/vulkan/vulkanCore/: Instance.cpp  Instance.hpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  VulkanCore.cpp  VulkanCore.hpp  VulkanDebug.cpp  logicalDevice.cpp  (+1 more)
src/renderer/core/: CMakeLists.txt  DecoupledRenderGraph.cpp  DecoupledRenderGraph.hpp  IRenderGraph.h  IRenderGraph.hpp  IResourceManager.h  IResourceManager.hpp  IVulkanBackend.h  IVulkanBackend.hpp  RenderSystemFactory.h  RenderSystemFactory.hpp  SimpleVulkanBackend.cpp  SimpleVulkanBackend.hpp  UnifiedResourceManager.cpp  UnifiedResourceManager.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
src/renderer/core/FrameContext/: FrameContext.hpp  commandPool.cpp
src/renderer/core/RenderGraph/: DependencyAnalyzer.cpp  DependencyAnalyzer.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  PipelineCache.hpp  RenderContext.cpp  RenderContext.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderGraphAnalyzer.cpp  RenderGraphAnalyzer.hpp  RenderGraphCompiler.cpp  RenderGraphCompiler.hpp  RenderGraphExecutor.cpp  RenderGraphExecutor.hpp  RenderGraphTypes.hpp  RenderPass.cpp  RenderPass.hpp  RenderPassSystem.cpp  RenderPassSystem.hpp  ResourceSystem.cpp  ResourceSystem.hpp  SynchronizationGenerator.cpp  SynchronizationGenerator.hpp
src/renderer/core/VulkanCore/: VulkanCore.cpp  VulkanCore.hpp  logicalDevice.cpp  vulkanDebug.cpp  vulkanDebug.hpp
src/renderer/core/WindowContext/: WindowContext.hpp  swapchain.cpp  swapchain.hpp
src/renderer/core/interface/: IRenderGraph.hpp  IVulkanBackend.hpp
src/renderer/core/resourceManager/: RenderSystemFactory.hpp
src/renderer/interface/: IBackend.hpp  IRHI.hpp  IRHI_STRUCT.hpp  IRenderer.hpp  IResourceManager.hpp  RHI_ENUMS.hpp  RHI_STRUCTS.hpp
src/renderer/pipeline/: CMakeLists.txt  pipeline.cpp  pipeline.hpp
src/renderer/pipeline/pipelineStates/: depthStencil.hpp  dynamic.hpp  multiSample.cpp  viewport.cpp  viewport.hpp
src/renderer/renderGraph/: RenderGraph.cpp  RenderGraphCompiler.cpp
src/renderer/resource/buffers/: Buffer.cpp  Buffer.hpp  IndexBuffer.hpp  UniformBuffer.hpp  VertexArrayBuffer.cpp  VertexBuffer.cpp
src/renderer/resource/models/: ModelLoader.hpp
src/renderer/resource/shaders/: ShaderBuilder.hpp  ShaderProgram.cpp  ShaderUtils.cpp  ShaderUtils.hpp
src/renderer/resourceManager/ResourceManager/: IndexBufferResource.hpp  TextureResource.cpp
src/renderer/resourceManager/buffers/: Buffer.cpp  Buffer.hpp  IndexBuffer.cpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArrayBuffer.cpp  VertexArrayBuffer.hpp  VertexBuffer.hpp  VertexLayouts.hpp
src/renderer/resourceManager/models/: Model.hpp  ModelLoader.cpp  ModelLoader.hpp
src/renderer/resourceManager/shaders/: DefaultShader.hpp  Shader.hpp  ShaderProgram.hpp
src/renderer/resourceManager/textures/: Texture.cpp  Texture.hpp
src/renderer/resources/: CMakeLists.txt
src/renderer/resources/buffers/: Buffer.cpp  IndexBuffer.hpp  UniformBuffer.cpp  VertexArrayBuffer.cpp  VertexArrayBuffer.hpp  VertexBuffer.cpp
src/renderer/resources/shaders/: ShaderBuilder.cpp  ShaderBuilder.hpp  shaderUtils.hpp
(+74 files in other folders)
